scrollbar fixed

--- a/style.css
+++ b/style.css
@@ -6,9 +6,9 @@
 }
 
 body{
-    position: relative;
-    height: 100vh;
-    width:100vw;
+    
+    height: auto;
+    max-width:100vw;
     
     display: flex;
     flex-direction: column;
@@ -28,11 +28,13 @@ body{
 
 header{
     position: sticky;
-    top: 10px;
+    top: 0px;
     display: flex;
     padding-top: 1em;
     margin-bottom: 2em;
+    backdrop-filter: blur(1.7px);
     z-index: 80;
+    
     
     
    
@@ -83,6 +85,10 @@ nav a:hover{
     position: relative;
     margin-bottom: 7em;
     min-height: 80vh;
+    
+    
+    
+   
     
 }
 
@@ -152,14 +158,19 @@ main{
 .icon{
     width: 20%;
     
+    
 }
 
 .about{
-    width: 100vw;
+    width: 100%;
     background-color: #262626;
     color: #19bfb7;
     padding: 2em;
     height: 20vh;
+    display: flex;
+    justify-content:center;
+    align-items: center;
+   
 }
 
 /* |||||||||||||||| main ||||||||||||||||||||||||\*/
